--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,19 @@
         android:theme="@style/Theme.HabitTracker"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".TimerVisual"
+            android:exported="false" />
+        <activity
+            android:name=".TimerNumerical"
+            android:exported="false" />
+        <activity
+            android:name=".Workouts"
+            android:exported="false" />
+        <activity
+            android:name=".Water"
+            android:exported="false" />
+        <activity
+            android:name=".Menu"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
